   * fixed tooltip display bug on MacOs (thanks to Israel Chauca)
   * when info is available, the first line of engine window displays mate distance
   * in case of engines not configured for some training stuff, added relevant error messages
   * fixes on Tooltips display (max width, better placement, auto hide of the tooltip after few seconds, clicking on a tooltip hides it)
- Annotation : added an option "mark tactical exercises". The tactical flag will be set to the game and a comment with ****d<depth>sc<score>. This option is only available when annotating with an UCI engine.
- Training : find best move. Will go to the next tactical position marked with 4 stars (****). See "mark tactical exercises" in Annotation feature. Pressing the right mouse button on "goto last move" (">>") button will go to next tactical exercises. A training base of over 1500 games has been released (not included in Scid package).
- added extra options to "sc_pos analyze" :
   * -mindepth. So if the thinking time is short, engine will not analyze for at least depth 4 (previous behavior), but to mindepth value.
   * -searchdepth : maximum depth of thinking
- Analysis Window new features:
   * new button "Show Engine Info" to add an extra line with the info returned by the engine (there is a button to hide/show it, works only with uci engines)
   * new "Add all variations" button to add to the current game all the multiPV variations of the engine (works only for uci engines)
   * now the "Add variation(s)" buttons work even at the end of a game (workaround, the variations are added one move before and the last game move is appended at the beginning of every variation)
   * when a variation is added from analysis window, also the engine name is added
   * the analysis window switches automatically to history mode when multipv = 1 (like in the 3.6.23 version)